overview: Fix issues with minimized windows in overview.

The minimized windows are now stacked underneath non-minimized windows.
Minimized windows now animate back when uncessfully swipe to close.

Test: manual
Bug: 886392, 886390
Change-Id: I520a9cfc642e5f417af6755b783b831098430ce8
Reviewed-on: https://chromium-review.googlesource.com/1238782
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593590}
Former-commit-id: 83a89fd4a1e4e7d50435b07fdb119a8f885e9916